--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,24 @@
   <script src="js/script.js"></script>
 </head>
 <body>
-  <h2>THE OLD MASTER PROJECT</h2>
+  <div id="header">
+    <h2>THE OLD MASTER PROJECT</h2>
+  </div>
+  <div id="search">
+    <select name="artist" id="dropdown">
+      <option disabled selected>Choose Artist</option>
+      <option value="sandro botticelli">Sandro Botticelli</option>
+      <option value="fra' angelico">Fra' Angelico</option>
+      <option value="corregio">Correggio</option>
+      <option value="piero della francesca">Piero della Francesca</option>
+      <option value="fra' filippo lippi">Fra' Filippo Lippi</option>
+      <option value="leonardo da vinci">Leonardo da Vinci</option>
+      <option value="masaccio">Masaccio</option>
+      <option value="titian">Titian</option>
+    </select>
+    <input id="search" type="text" placeholder="ARTIST, TITLE, ETC...">
+    <button id="submitSearch">SEARCH</button>
+  </div>
+  <div id="main"></div>
 </body>
 </html>
