--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,15 +18,13 @@
       <option disabled selected>Choose Artist</option>
       <option value="sandro botticelli">Sandro Botticelli</option>
       <option value="fra' angelico">Fra' Angelico</option>
-      <option value="corregio">Correggio</option>
+      <option value="correggio">Correggio</option>
       <option value="piero della francesca">Piero della Francesca</option>
       <option value="fra' filippo lippi">Fra' Filippo Lippi</option>
       <option value="leonardo da vinci">Leonardo da Vinci</option>
       <option value="masaccio">Masaccio</option>
       <option value="titian">Titian</option>
     </select>
-    <input id="search" type="text" placeholder="ARTIST, TITLE, ETC...">
-    <button id="submitSearch">SEARCH</button>
   </div>
   <div id="main"></div>
 </body>
