--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,13 @@
       <option value="titian">Titian</option>
     </select>
   </div>
-  <div id="main"></div>
+  <div id="grid" data-columns>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </body>
+  <script src="js/salvattore.min.js"></script>
 </html>
