--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
     <div></div>
     <div></div>
     <div></div>
+    <div></div>
   </div>
 </body>
   <script src="js/salvattore.min.js"></script>
