--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,12 +24,12 @@ img.large {
 div.infoBox {
   float: left;
   position: relative;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 100%;
-  margin-top: -20%;
-  background-color: rgba(0,0,0,0.7)
+  margin: 0 auto;
+  padding: 4px;
+  width: 232px;
+  margin-top: -30%;
+  background-color: rgba(0,0,0,0.7);
+  opacity: 0;
 }
 
 /*grid styling*/
