--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,7 +9,9 @@ body {
 
 .thumbnail {
   width: 232px;
-  padding: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+  padding-bottom: 2px;
   overflow: hidden;
   position: relative;
 }
