--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,13 +26,11 @@
       <option value="titian">Titian</option>
     </select>
   </div>
-  <div id="grid" data-columns>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <div id="wrapper">
+    <div id="grid" data-columns>
+      <div></div>
+      <div></div>
+    </div>
   </div>
 </body>
   <script src="js/salvattore.min.js"></script>
